<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:title="@string/title_summary" />-->

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_handyman_24"
        android:title="@string/title_maintenance_history" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/title_maintenance_calendar" />

    <item
        android:id="@+id/navigation_garage"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/title_profile" />

</menu>