<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    android:elevation="98dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:background="#f2f3f4"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation = "vertical"
            android:scaleType="centerCrop"
            android:id="@+id/image_post"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heading_post"
            android:textSize="30dp"
            android:text="@string/heading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_post"
            android:textSize="17dp"
            android:text="@string/subheading"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>